<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thcborges.whatsappclone.activity.CadastroUsuariosActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="@dimen/cadastro_logo_largura"
        android:layout_height="@dimen/cadastro_logo_altura"
        app:srcCompat="@drawable/usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editCadastroNomeId"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/cadastro_nome"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/editCadastroNomeId"
        android:id="@+id/editCadastroTelefoneId"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/cadastro_telefone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/editCadastroTelefoneId"
        android:layout_alignStart="@+id/editCadastroTelefoneId"
        android:id="@+id/editCadastroEmailId"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/cadastro_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editCadastroSenhaId"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@+id/editCadastroEmailId"
        android:layout_alignParentStart="true"
        android:hint="@string/login_senha" />

    <Button
        android:text="@string/botao_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCadastroSenhaId"
        android:layout_centerHorizontal="true"
        android:id="@+id/botaoCadastrarId"
        android:theme="@style/botaoPadrao"/>

</RelativeLayout>
