<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thcborges.whatsappclone.activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:layout_width="@dimen/cadastro_logo_largura"
        android:layout_height="@dimen/cadastro_logo_altura"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editloginEmail"
        android:hint="@string/cadastro_email"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editLoginSenha"
        android:hint="@string/login_senha"
        android:layout_below="@+id/editloginEmail"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cadastro_botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btLogar"
        tools:text="@string/cadastro_botao"
        android:layout_below="@+id/editLoginSenha"
        android:layout_alignParentStart="true"
        android:theme="@style/botaoPadrao"/>

    <TextView
        android:text="@string/texto_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/textColorPrimary"
        android:onClick="abrirCadastroUsuario"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
